docroot/themes/custom/emulsifymars/components/02-molecules/parent-page-header/parent-page-header.scss
.parent-page-header {
  background-color: clr(subcolor-2);
  padding: 12rem 4rem 8rem 4rem;
  position: relative;
  overflow: hidden;

  @include small {
    background-position: center -16rem;
    background-size: 33rem;
    padding: 5rem 4rem 8rem 4rem;
  }

  .bg-video {
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;

    .ambient-video__control {
      z-index: 10;
      top: 15px;
      left: calc(100% - 75px);
    }
  }

  @include medium {
    background-size: 75rem;
    background-position: center -50rem;
  }

  & > *:not(.bg-video) {
    position: relative;
    z-index: 3;
  }

  .parent-page-heading {
    font-family: variable(primary-font);
    color: clr(primary);
    text-align: center;
    font-weight: 500;

    @include small {
      font-size: 4rem;
      line-height: 4rem;
    }

    @include medium {
      font-size: 5.6rem;
      line-height: 5.6rem;
    }

    @include large {
      font-size: 6.4rem;
      line-height: 6.4rem;
    }
  }

  .parent-page-paragraph {
    font-family: variable(secondary-font);
    color: clr(primary);
    text-align: center;
    margin: 5.5rem auto 0 auto;

    @include small {
      font-size: 1.8rem;
      line-height: 2.88rem;
    }

    @include medium {
      font-size: 2rem;
      max-width: 89.6rem;
      line-height: 3.2rem;
    }

    @include large {
      font-size: 2.2rem;
      line-height: 3.52rem
    }
  }

  &--with-min-height {
    min-height: 45.2rem;
    max-height: 58.2rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;

    .brand-shape {
      position: absolute;
      display: block;
      z-index: 1;
      left: 50%;
      transform: translateX(-50%);

      @include xs {
        width: 35rem;
        height: 35rem;
        top: -12rem;    
      }

      @include medium {
        width: 60rem;
        height: 60rem;
        top: -26rem;
      }

      @include large {
        width: 68rem;
        height: 68rem;
        top: -30rem;
      }
      
      svg {
        width: 100%;
        height: 100%;
        fill: clr(subcolor-1);
        opacity: 0.2;
      }
    }

    .eyebrow {
      margin-top: 2rem;
    }

    .parent-page-heading {
      margin: 0 auto;
    }

    .horizontal-img__inner {
      margin: 4rem auto;
    }

    @include medium {
      min-height: 48.3rem;
      max-height: 54.3rem;

      .eyebrow {
        margin-top: 6.8rem;
        margin-bottom: 2rem;
      }
    }

    @include large {
      min-height: 52rem;
      max-height: 58.0rem;

      .horizontal-img__inner {
        margin: 5rem auto;
      }
    }
  }

  &--with-bg-media {
    background-position: top center;
    background-size: cover;

    .brand-shape {
      display: none;
    }

    .parent-page-heading,
    .eyebrow,
    .parent-page-paragraph {
      color: clr(subcolor-3);

      a {
        color: clr(subcolor-3);
        text-decoration: none;
      }
    }
  }

  &--with-bg-video {
    background-position: top center;
    background-size: cover;
    padding: 0;

    .content {
      position: absolute;
      z-index: 1;
      padding: 0 2rem;
      left: 0;
      width: 100%;
      top: calc(50% - 15rem);

      @include small {
        padding: 0 2rem;
      }

      @include large {
        padding: 0 4rem;
      }

      @include xl {
        left: calc(50% - 89.6rem / 2);
        width: 89.6rem;
      }
    }

    .brand-shape {
      display: none;
    }

    .parent-page-heading,
    .eyebrow,
    .parent-page-paragraph {
      color: clr(subcolor-3);

      a {
        color: clr(subcolor-3);
        text-decoration: none;
      }
    }
  }

  .eyebrow {
    @include xs {
      font-size: 1.4rem;
      line-height: 1.4rem;
    }

    @include medium {
      font-size: 1.6rem;
      line-height: 1.6rem;
    }
  }

  &--tint-enabled {
    &::after {
      content: '';
      position: absolute;
      display: block;
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      background-color: rgba(0, 0, 0, .5);
      z-index: 2
    }
  }
}

